--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -12,5 +12,5 @@ resources.frontController.params.displayExceptions = 0
 db.adapter=PDO_MYSQL
 db.params.host=localhost
 db.params.username=root
-db.params.password=123456
+db.params.password=522405591
 db.params.dbname=weixin
